Added logic for first responder >Added logic for editing currency values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">Rates</string>
+    <string name="currency_value">%1$s</string>
+    <string name="currency_code">%1$s</string>
+    <string name="currency_name">%1$s</string>
+    <string name="currency_list_title">Conversion Rates</string>
 </resources>
