Added empty state view Added Error message dialog Added Unit Tests Did cleanup

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="currency_code">%1$s</string>
     <string name="currency_name">%1$s</string>
     <string name="currency_list_title">Conversion Rates</string>
+    <string name="empty_state_message">Empty Currency</string>
+    <string name="error_message">%1$s</string>
+    <string name="dialog_title">%1$s</string>
+    <string name="dialog_message">%1$s</string>
+    <string name="ok">Dismiss</string>
 </resources>
